# barsborsen

./: README.md  package-lock.json
.github/workflows/: docker-image.yml  main.yml
donationdb/: .dockerignore  Dockerfile  Pipfile  distroless.Dockerfile  pyproject.toml  requirements.txt
donationdb/deployments/: views.py
donationdb/donationdb/: settings.py  standalone.py
donationdb/donations/: models.py  views.py
donationdb/donations/migrations/: 0034_donor_phone.py
donationdb/donations/templates/donations/: donation.html
donationdb/payments/: models.py  tests.py  views.py
frontend/: package.json
frontend/src/components/: collage.tsx
