[project]
name = "donationdb"
version = "0.1.0"
description = "Bärsbörsen"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.0",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.0.1",
    "psycopg[binary,pool]>=3.3.2",
    "python-dateutil==2.9.0.post0",
    "requests>=2.32.5",
    "sendgrid>=6.12.5",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "django-types>=0.22.0",
    "python-dotenv>=1.2.1",
]
